js/js.translator/testData/incremental/invalidation/openClassOpenMethods/lib1/ClassB.1.kt
open class B : A {
    override fun test() = 1
}
